--- a/css/blocks/header.sass
+++ b/css/blocks/header.sass
@@ -53,6 +53,7 @@
   &__nav-list
     &_bottom
       display: flex
+      flex-wrap: wrap
       position: absolute
       left: 0
       &_main
@@ -88,7 +89,7 @@
 
 
 .logo
-  margin: 24px 0 16px
+  margin: 24px 8px 16px 0
   position: relative
   z-index: 30
   &__text
