--- a/css/general.sass
+++ b/css/general.sass
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5
   margin: 0
 
 h2.title, h3.title
-  margin-top: 80px
+  margin-top: 1.25em
   @include font($textBlack, 800, 64px, 1.1)
 
 p
@@ -102,7 +102,7 @@ div, ul, li, a, button
       &.btn_arrowL
         padding-left: 24px
   &_gradient
-    padding: 26px 55px
+    padding: 26px 56px
     +border-radius(35px)
     background: linear-gradient(to right, $blue, $green)
     font-weight: 800
@@ -120,10 +120,10 @@ div, ul, li, a, button
     &:hover
       color: $green
   &_arrowR::after
-    margin-left: 30px
+    margin-left: 28px
     content: url("../images/arrow_white_btn.svg")
   &_arrowL::before
-    margin-right: 15px
+    margin-right: 16px
     content: url("../images/arrow_white_left_btn.svg")
   &_phone-icon::before
     margin-right: 6px
@@ -255,7 +255,7 @@ div, ul, li, a, button
         display: block
         bottom: -2px
         left: 40px
-        width: 50px
+        width: 52px
         height: 3px
         background: #1378BA
 
