--- a/css/responsive/max767.sass
+++ b/css/responsive/max767.sass
@@ -1,13 +1,46 @@
 @media only screen and (max-width: 767px)
+  .s_hero .hero_main
+    padding-top: 0
+
+  .hero
+    &_main
+      &__content__right-block
+        margin-left: 0
+        text-align: center
+        font-size: 20px
+        & .btn_gradient
+          margin: 52px 0 64px
+      &__portfolio-link
+        position: unset
+      h1
+        &::after
+          left: calc(50% - 26px)
+
   .hero h1.white, .hero h1
     font-size: 40px
 
   h2.title, h3.title
-    font-size: 46px
+    margin-top: 1em
+    font-size: 40px
 
+  .btn
+    white-space: normal
+    text-align: center
+
+  .services
+    & .title
+      text-align: center
+
+  .bg-text::before
+    content: unset
 
   .benefits
+    padding: 40px 0
     &__list
+      &_main
+        margin: 0 auto
+        width: fit-content
+        flex-direction: column
       &_weba
         margin-top: 0
     &__item
@@ -17,9 +50,15 @@
         font-size: 1rem
       &::before
         margin-right: 0
+      &_main
+        margin: 20px 0
+        flex-direction: row
+        &::before
+          margin-right: 1em
 
   .staff
     &__text
+      padding: 0 0 40px
       flex-direction: column
       &__sertif
         margin: 1em 0
@@ -32,6 +71,21 @@
         p
           font-size: 1rem
           line-height: 1.2
+
+  .callback
+    padding: 40px 0
+    h3
+      font-size: 32px
+
+  .prices
+    & .prices__block_pink
+      margin-top: 1.5rem
+      width: 100%
+    & .prices__block_blue
+      margin-right: 0
+      width: 100%
+    & .prices__block_blue_small
+      flex: unset
 
   .footer
     padding-bottom: 20px
