--- a/css/hamburger.sass
+++ b/css/hamburger.sass
@@ -14,10 +14,6 @@
   background: inherit
   border: 1px solid $greyBlue
   border-radius: 50%
-  //&:focus
-  //  outline: none
-  //&:focus-visible
-  //  outline: none
   &::after
     content: 'МЕНЮ'
     position: absolute
@@ -27,6 +23,11 @@
     color: $blue
     font-weight: 800
     font-size: 10px
+
+.adaptive-menu-toggle--open
+  background: $blue
+  &::after
+    font-size: 0
 
 .menu-toggle-inner
   width: 16px
@@ -80,7 +81,7 @@
   -moz-transition: opacity 0.2s ease 0s, transform 0.2s ease 0s, -moz-transform 0.2s ease 0s
 
 .adaptive-menu-toggle--open .menu-toggle-line
-  background: $blue
+  background: #ffffff
 
 .adaptive-menu-toggle--open .menu-toggle-line--1
   width: 0
@@ -113,7 +114,6 @@
 @media only screen and (max-width: 1200px)
   .header__hamburger
     display: block !important
-    padding: 0 16px
     right: 10px
     top: 20px
 
@@ -126,10 +126,14 @@
     &__nav-list
       &_bottom
         position: unset
+        justify-content: center
         li
           display: flex
-          flex: 0 1 20%
+          flex: 0 1 30%
           margin: 8px
+        &_main
+          flex-direction: row
+          background: unset
       &__link
         display: flex
         flex: 0 0 1
@@ -154,10 +158,10 @@
     padding: 120px 0 40px
     position: absolute
     left: -15px
-    right: -15px
+    right: 24px
     top: 0
     +transform(translateX(-100%))
-    z-index: 3
+    z-index: 25
 
     .address p
       @include font($textBlack)
