--- a/css/pages/services.sass
+++ b/css/pages/services.sass
@@ -192,6 +192,58 @@
   h2
     margin-bottom: 48px
 
+.stage
+  & .title
+    text-align: center
+  &__list
+    counter-reset: magnificentCounter
+    li
+      padding: 32px 0 40px 152px
+      position: relative
+      list-style: none
+      &:not(:last-child)
+        border-bottom: 1px solid $lightestGray
+      &::before
+        counter-increment: magnificentCounter
+        content: "ЭТАП №" counter(magnificentCounter)
+        background: url("../images/case_bubble.svg") no-repeat
+        display: inline-block
+        font-weight: 700
+        font-size: 16px
+        text-align: center
+        margin: 16px 0
+        line-height: 36px
+        width: 95px
+        height: 42px
+        color: white
+        letter-spacing: 1px
+      &::after
+        content: ''
+        width: 110px
+        height: 110px
+        position: absolute
+        left: 0
+        bottom: 40px
+        background-size: contain
+      &:first-child::after
+        background: url("../images/case_icon_list1.svg") no-repeat
+      &:nth-child(2)::after
+        background: url("../images/case_icon_list2.svg") no-repeat
+      &:nth-child(3)::after
+        background: url("../images/case_icon_list3.svg") no-repeat
+      &:nth-child(4)::after
+        background: url("../images/case_icon_list4.svg") no-repeat
+      &:nth-child(5)::after
+        background: url("../images/case_icon_list5.svg") no-repeat
+      h3
+        font-weight: 600
+        font-size: 36px
+        margin-bottom: 1em
+      p
+        font-weight: 400
+        font-size: 16px
+        line-height: 1.625
+
 .s_result
   margin-top: 80px
   background: $lightestGray
@@ -201,7 +253,7 @@
   background: $lightestGray url('../images/bg_result_case.svg') left center no-repeat
   background-size: 390px 390px
   & .title
-    margin: 0 0 0 108px
+    margin: 0 0 0.5em 108px
     width: calc(50% - 108px)
   &__list
     &__item
