--- a/css/pages/complex.sass
+++ b/css/pages/complex.sass
@@ -168,8 +168,10 @@
     margin-top: 85px
     &_blue
       background: url("../images/voronka_blue_arrows.svg") top center no-repeat
+      background-size: contain
     &_green
       background: url("../images/voronka_green_arrows.svg") top center no-repeat
+      background-size: contain
   &__line
     +space
     align-items: center
