--- a/css/pages/main.sass
+++ b/css/pages/main.sass
@@ -142,7 +142,7 @@
     margin-bottom: 1em
   &__list
     display: grid
-    grid-template-columns: repeat(auto-fit, minmax(400px, 420px))
+    grid-template-columns: repeat(auto-fit, minmax(320px, 420px))
     grid-gap: 20px
     justify-content: center
   &__item
@@ -344,7 +344,7 @@
       display: flex
   &_social
     h2
-      margin-bottom: 80px
+      margin-bottom: 1.25em
       text-align: center
 
 .s_staff_service-page
@@ -420,7 +420,7 @@
     margin-top: 40px
     display: grid
     grid-gap: 20px
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr))
+    grid-template-columns: repeat(auto-fit, minmax(340px, 600px))
   &__img
     max-height: 500px
     +border-radius(10px)
@@ -517,6 +517,7 @@
     margin: 30px 0 50px
     &_main
       margin: 140px 0 0 90px
+      width: fit-content
   &__item
     margin-bottom: 20px
     display: flex
@@ -551,6 +552,7 @@
     width: 50%
     &:first-child
       background: url("../images/bg_form_contacts.jpg") no-repeat
+      background-size: cover
       & .wrapper_half
         margin-left: auto
     &.right
