--- a/css/responsive/max480.sass
+++ b/css/responsive/max480.sass
@@ -1,6 +1,15 @@
 @media only screen and (max-width: 480px)
+  .logo__img
+    height: 48px
+
+  .hero h1.white, .hero h1
+    font-size: 26px
+
   h2.title, h3.title
     font-size: 28px
+
+  .hero_main__content__right-block
+    font-size: 16px
 
   .benefits__item
     flex-direction: column
@@ -12,3 +21,6 @@
 
   .s_approach
     display: none
+
+  .contacts_main__left-block h3
+    font-size: 24px
