--- a/css/responsive/max640.sass
+++ b/css/responsive/max640.sass
@@ -24,6 +24,11 @@
         svg
           margin: 0 0 14px
 
+  .portfolio__item__text
+    &__title
+      font-size: 20px
+    &__info
+      font-size: 16px
 
   .questions
     margin: 40px 10px 0
@@ -37,9 +42,12 @@
     &__text
       margin-bottom: 1em
 
-  .contacts_main__left-block h3
-    font-size: 32px
-    text-align: center
+  .contacts
+    &_main__left-block h3
+      font-size: 32px
+      text-align: center
+    &__list_main
+      margin: 40px auto 0
 
   .staff .title
     margin-right: unset
@@ -48,3 +56,9 @@
 
   .footer
     padding-top: 40px
+
+  .slick-dots
+    margin-top: 40px
+
+  .slick-slider
+    margin: 0 auto
