--- a/css/responsive/max767.sass
+++ b/css/responsive/max767.sass
@@ -31,6 +31,9 @@
     & .title
       text-align: center
 
+  .partners__list
+    margin-top: 40px
+
   .bg-text::before
     content: unset
 
@@ -77,6 +80,9 @@
     h3
       font-size: 32px
 
+  .contacts__item
+    font-size: 18px
+
   .prices
     & .prices__block_pink
       margin-top: 1.5rem
@@ -86,6 +92,15 @@
       width: 100%
     & .prices__block_blue_small
       flex: unset
+    &__block_olive_social::after
+      bottom: 230px
+      width: 273px
+      height: 320px
+      opacity: 0.1
+    &_complex
+      margin: 60px 0 0
+    &__list_weba li
+      width: 100%
 
   .footer
     padding-bottom: 20px
