--- a/css/responsive/max960.sass
+++ b/css/responsive/max960.sass
@@ -38,7 +38,11 @@
         content: unset
       & .prices__list
         padding-right: 0
-
+    &__block_olive_social::after
+      bottom: -30px
+      width: 300px
+      height: 300px
+      opacity: 0.6
 
   .questions
     &__text
@@ -76,3 +80,5 @@
         right: unset
         left: 10px
 
+  .slick-dots
+    margin-top: 60px
